created sendMessage and forwardedMessage
