# doc/api.yaml
@@ -60,7 +60,7 @@ paths:
         content:
           application/json:
             schema:
-              description: id of the user who made the login
+              description: username to login
               type: object
               properties:
                 username: {$ref: "#/components/schemas/Username"}
@@ -69,11 +69,15 @@ paths:
           description: User log-in action successful
           content:
             application/json:
-              schema: {$ref: "#/components/schemas/UserId"}
+              schema:
+                type: object
+                description: id of the user who made the login
+                properties:
+                  userid: {$ref: "#/components/schemas/UserId"}
         "400": {$ref: "#/components/responses/BadRequest"}
         "500": {$ref: "#/components/responses/InternalServerError"}
         
-  /chats/newchat:
+  /newchat:
     post:
       security:
         - bearerAuth: []
@@ -238,7 +242,11 @@ paths:
         required: true
         content:
           application/json:
-            schema: {$ref: "#/components/schemas/UsernameList"}
+            schema: 
+              type: object
+              description: list of username
+              properties:
+                usernamelist: {$ref: "#/components/schemas/UsernameList"}
       responses:
         "204":
           description: Users added succesfully
@@ -374,7 +382,11 @@ paths:
           description: Message send succesfully
           content:
             application/json:
-              schema: {$ref: "#/components/schemas/MessageId"}
+              schema: 
+                type: object
+                description: id of the new message created
+                properties: 
+                  messageid: {$ref: "#/components/schemas/MessageId"}
         "400": {$ref: "#/components/responses/BadRequest"}
         "401": {$ref: "#/components/responses/Unauthorized"}
         "404": {$ref: "#/components/responses/NotFound"}
@@ -405,7 +417,11 @@ paths:
           description: Message forwarded succesfully
           content:
             application/json:
-              schema: {$ref: "#/components/schemas/MessageId"}
+              schema:
+              type: object
+              description: id of the new message created
+              properties: 
+                messageid: {$ref: "#/components/schemas/MessageId"}
         "400": {$ref: "#/components/responses/BadRequest"}
         "401": {$ref: "#/components/responses/Unauthorized"}
         "404": {$ref: "#/components/responses/NotFound"}
@@ -660,10 +676,6 @@ components:
       description: info to create a new message
       type: object
       properties:
-        isForwarded:
-          description: boolean to determine if the message was forwarded
-          type: boolean
-          example: false
         text: {$ref: "#/components/schemas/TextData"}
         photo: {$ref: "#/components/schemas/Photo"}
 
